# spc-cpp

./: .clang-format  .editorconfig  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: spcConfig.cmake.in
examples/: CMakeLists.txt  arcgis.cpp  archive.cpp  parse_outlook.cpp  static_feed.cpp
include/spc/: api.hpp  error.hpp  geo.hpp  geometry.hpp  http_client.hpp  pagination.hpp  rate_limit.hpp  retry.hpp  spc.hpp  types.hpp
include/spc/models/: common.hpp  convective.hpp  fire_weather.hpp  mesoscale.hpp  outlook.hpp  storm_report.hpp  watch.hpp
src/: CMakeLists.txt
src/api/: client.cpp
src/core/: error.cpp  geometry.cpp  rate_limit.cpp
src/http/: client.cpp
src/models/: common.cpp  convective.cpp  fire_weather.cpp  mesoscale.cpp  outlook.cpp  storm_report.cpp  watch.cpp
tests/: CMakeLists.txt  test_arcgis.cpp  test_corpus.cpp  test_geometry.cpp  test_parser.cpp
tests/fixtures/: README.md  arcgis_day1_categorical.esri.json  arcgis_day1_categorical.geojson  arcgis_day1_fire_weather.esri.json  arcgis_day1_prob_hail.esri.json  arcgis_day1_prob_hail.geojson  arcgis_day1_prob_tornado.esri.json  arcgis_day1_prob_tornado.geojson  arcgis_day1_prob_wind.esri.json  arcgis_day1_prob_wind.geojson  arcgis_day1_torn_conditional_intensity.esri.json  arcgis_day2_categorical.esri.json  arcgis_day2_categorical.geojson  arcgis_day2_fire_weather.esri.json  arcgis_day2_prob_any.esri.json  arcgis_day2_prob_any.geojson  arcgis_day3_categorical.esri.json  arcgis_day3_categorical.geojson  arcgis_mesoscale_discussion.esri.json  day1otlk_cat.nolyr.geojson  day2otlk_cat.nolyr.geojson  day3otlk_cat.nolyr.geojson  day4prob.nolyr.geojson  iem_spc_watch.json  iem_spcoutlook_torn.json  iem_storm_reports.json  spc_404_no_active_outlook.html
tools/: cpp_auto_allowlist.txt  cpp_auto_audit.py
